tests/whiley/valid/test_1397.wyal
type nat is (int n)
where:
    n >= 0


assert "type invariant not satisfied":
    forall(int x):
        if:
            x != 1
            x != -1
        then:
            1 is nat


