tests/whiley/invalid/test_120.wyal
type scf1nat is (int n)
where:
    n >= 0


assert "type invariant not satisfied":
    forall(int x):
        if:
            x == -1
        then:
            x is scf1nat


